# world_Imaker_OLD

./: README.md
Master/: CMakeLists.txt  Cmake.txt
Master/lib/glimac/: Makefile  cmake_install.cmake
Master/lib/glimac/include/glimac/: Cube.hpp  Cursor.hpp  GestionCube.hpp  Reglages.hpp  SDLWindowManager.hpp  TrackballCamera.hpp  Vertex3Dcolor.hpp  colonne.hpp  glm.hpp
Master/lib/glimac/src/: Cube.cpp  Cursor.cpp  GestionCube.cpp  Reglages.cpp
Master/shaders/: 3D.vs.glsl  directionallight.fs.glsl  normals.fs.glsl  pointlight.fs.glsl
Master/src/: main.cpp
